# eigen-plc-mcp

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
eigen_plc_mcp/: __init__.py  knowledge.py  server.py  templates.py  validator.py
tests/: __init__.py  test_knowledge.py  test_templates.py  test_validator.py
